tests/negative/path_traversal_backslash.uzpp
// XATOLIK_KUTILMOQDA: path_traversal: backslash bilan boshlanish
ulash "\\server\\share\\evil.hpp"
butun asosiy() { qaytarish 0; }
